@@ -1,4 +1,4 @@
-/* Copyright (c) 2001-2017, The HSQL Development Group
+/* Copyright (c) 2001-2011, The HSQL Development Group
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -50,7 +50,7 @@ import org.hsqldb.types.Types;
  * Parser for session and management statements
  *
  * @author Fred Toussi (fredt@users dot sourceforge.net)
- * @version 2.3.4
+ * @version 2.3.0
  * @since 1.9.0
  */
 public class ParserCommand extends ParserDDL {
@@ -79,7 +79,7 @@ public class ParserCommand extends ParserDDL {
         HsqlArrayList list = new HsqlArrayList();
         Statement     cs   = null;
 
-        reset(session, sql);
+        reset(sql);
 
         while (true) {
             if (token.tokenType == Tokens.X_ENDPARSE) {
@@ -107,12 +107,6 @@ public class ParserCommand extends ParserDDL {
             list.add(cs);
         }
 
-        if (list.size() > 1) {
-            if (database.sqlRestrictExec) {
-                throw Error.error(ErrorCode.X_07502);
-            }
-        }
-
         int returnType = cmd.getStatementType();
 
         if (returnType != StatementTypes.RETURN_ANY) {
@@ -124,11 +118,8 @@ public class ParserCommand extends ParserDDL {
                 }
             } else if (returnType == StatementTypes.RETURN_RESULT) {
 
-                // allow update count statements with Statement.executeQuery()
-                // to return an empty result set
-                if (database.sqlRestrictExec) {
-                    throw Error.error(ErrorCode.X_07504);
-                }
+                // allow update count statements to return an empty result set
+                // throw Error.error(ErrorCode.X_07504);
             }
         }
 
@@ -192,11 +183,6 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.TRUNCATE : {
                 cs = compileTruncateStatement();
-
-                break;
-            }
-            case Tokens.REPLACE : {
-                cs = compileInsertStatement(RangeGroup.emptyArray);
 
                 break;
             }
@@ -305,10 +291,6 @@ public class ParserCommand extends ParserDDL {
                 cs = compileDeclare();
                 break;
 
-            case Tokens.PERFORM :
-                cs = compilePerform();
-                break;
-
             default :
                 throw unexpectedToken();
         }
@@ -336,8 +318,8 @@ public class ParserCommand extends ParserDDL {
 
     private Statement compileDeclare() {
 
-        Statement      cs;
-        ColumnSchema[] variables;
+        Statement    cs;
+        ColumnSchema variables[];
 
         cs = compileDeclareLocalTableOrNull();
 
@@ -355,7 +337,7 @@ public class ParserCommand extends ParserDDL {
             return cs;
         }
 
-        cs = compileDeclareCursorOrNull(RangeGroup.emptyArray, false);
+        cs = compileDeclareCursor(RangeGroup.emptyArray, false);
 
         if (cs == null) {
             throw lastError == null ? unexpectedToken()
@@ -407,8 +389,7 @@ public class ParserCommand extends ParserDDL {
             new ExpressionValue(password, Type.SQL_VARCHAR)
         };
         Statement cs =
-            new StatementSession(session, compileContext,
-                                 StatementTypes.SET_SESSION_AUTHORIZATION,
+            new StatementSession(StatementTypes.SET_SESSION_AUTHORIZATION,
                                  args);
 
         return cs;
@@ -449,12 +430,11 @@ public class ParserCommand extends ParserDDL {
                 read();
                 readThis(Tokens.TYPE);
 
-                int type;
+                int type = TableBase.MEMORY_TABLE;
 
                 switch (token.tokenType) {
 
                     case Tokens.MEMORY :
-                        type = TableBase.MEMORY_TABLE;
                         break;
 
                     case Tokens.CACHED :
@@ -544,6 +524,8 @@ public class ParserCommand extends ParserDDL {
 
     private Statement compileSet() {
 
+        int position = super.getPosition();
+
         read();
 
         switch (token.tokenType) {
@@ -573,8 +555,7 @@ public class ParserCommand extends ParserDDL {
 
                 Expression[] args = new Expression[]{ e };
 
-                return new StatementSession(session, compileContext,
-                                            StatementTypes.SET_CATALOG, args);
+                return new StatementSession(StatementTypes.SET_CATALOG, args);
             }
             case Tokens.SCHEMA : {
                 read();
@@ -589,35 +570,19 @@ public class ParserCommand extends ParserDDL {
                                                 args);
                 }
 
-                if (e.isUnresolvedParam()) {
-                    e.setDataType(session, Type.SQL_VARCHAR_DEFAULT);
-                }
-
                 if (!e.getDataType().isCharacterType()) {
                     throw Error.error(ErrorCode.X_0P000);
                 }
 
-                switch (e.getType()) {
-
-                    case OpTypes.PARAMETER :
-                    case OpTypes.DYNAMIC_PARAM :
-                    case OpTypes.VALUE :
-                        break;
-
-                    case OpTypes.SQL_FUNCTION :
-                        if (((FunctionSQL) e).isValueFunction()) {
-                            break;
-                        }
-
-                    // fall through
-                    default :
-                        throw Error.error(ErrorCode.X_0P000);
+                if (e.getType() != OpTypes.VALUE
+                        && (e.getType() != OpTypes.SQL_FUNCTION
+                            || !((FunctionSQL) e).isValueFunction())) {
+                    throw Error.error(ErrorCode.X_0P000);
                 }
 
                 Expression[] args = new Expression[]{ e };
 
-                return new StatementSession(session, compileContext,
-                                            StatementTypes.SET_SCHEMA, args);
+                return new StatementSession(StatementTypes.SET_SCHEMA, args);
             }
             case Tokens.NO : {
                 read();
@@ -760,12 +725,11 @@ public class ParserCommand extends ParserDDL {
                 readThis(Tokens.TABLE);
                 readThis(Tokens.TYPE);
 
-                int type;
+                int type = TableBase.MEMORY_TABLE;
 
                 switch (token.tokenType) {
 
                     case Tokens.MEMORY :
-                        type = TableBase.MEMORY_TABLE;
                         break;
 
                     case Tokens.CACHED :
@@ -800,7 +764,7 @@ public class ParserCommand extends ParserDDL {
 
                     read();
                 } else {
-                    delay = readInteger();
+                    delay = this.readInteger();
 
                     if (delay < 0) {
                         delay = 0;
@@ -813,7 +777,7 @@ public class ParserCommand extends ParserDDL {
                     }
                 }
 
-                Object[] args = new Object[]{ Integer.valueOf(delay) };
+                Object[] args = new Object[]{ new Integer(delay) };
 
                 return new StatementCommand(
                     StatementTypes.SET_DATABASE_FILES_WRITE_DELAY, args, null,
@@ -821,12 +785,12 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.PASSWORD : {
                 String  password;
-                Boolean isDigest = Boolean.FALSE;
+                boolean isDigest = false;
 
                 read();
 
                 if (readIfThis(Tokens.DIGEST)) {
-                    isDigest = Boolean.TRUE;
+                    isDigest = true;
                 }
 
                 password = readPassword();
@@ -837,8 +801,8 @@ public class ParserCommand extends ParserDDL {
                 Statement cs =
                     new StatementCommand(StatementTypes.SET_USER_PASSWORD,
                                          args);
-                String sql = User.getSetCurrentPasswordDigestSQL(
-                    database.granteeManager, password, isDigest);
+                String sql = User.getSetCurrentPasswordDigestSQL(password,
+                    isDigest);
 
                 cs.setSQL(sql);
 
@@ -876,6 +840,8 @@ public class ParserCommand extends ParserDDL {
                 return compileSetProperty();
             }
             default : {
+                rewind(position);
+
                 return compileSetStatement(
                     session.sessionContext.sessionVariableRangeGroups,
                     session.sessionContext.sessionVariablesRange);
@@ -889,7 +855,7 @@ public class ParserCommand extends ParserDDL {
 
         Table    table = readTableName();
         Object[] args  = new Object[] {
-            table.getName(), null, null
+            table.getName(), null
         };
 
         switch (token.tokenType) {
@@ -945,7 +911,6 @@ public class ParserCommand extends ParserDDL {
                 read();
 
                 args[1] = value;
-                args[2] = Integer.valueOf(TableBase.CACHED_TABLE);
 
                 return new StatementCommand(StatementTypes.SET_TABLE_INDEX,
                                             args, null,
@@ -956,34 +921,17 @@ public class ParserCommand extends ParserDDL {
 
                 int newType;
 
-                switch (token.tokenType) {
-
-                    case Tokens.MEMORY :
-                        newType = TableBase.MEMORY_TABLE;
-                        break;
-
-                    case Tokens.CACHED :
-                        newType = TableBase.CACHED_TABLE;
-                        break;
-
-                    default :
-                        throw unexpectedToken();
-                }
-
-                switch (table.getTableType()) {
-
-                    case TableBase.MEMORY_TABLE :
-                    case TableBase.CACHED_TABLE :
-                    case TableBase.TEXT_TABLE :
-                        break;
-
-                    default :
-                        throw unexpectedToken();
+                if (token.tokenType == Tokens.CACHED) {
+                    newType = TableBase.CACHED_TABLE;
+                } else if (token.tokenType == Tokens.MEMORY) {
+                    newType = TableBase.MEMORY_TABLE;
+                } else {
+                    throw super.unexpectedToken();
                 }
 
                 read();
 
-                args[1] = Integer.valueOf(newType);
+                args[1] = new Integer(newType);
 
                 return new StatementCommand(StatementTypes.SET_TABLE_TYPE,
                                             args, null,
@@ -1024,7 +972,7 @@ public class ParserCommand extends ParserDDL {
             case Tokens.SPACE : {
                 read();
 
-                Integer id = readIntegerObject();
+                Integer id = super.readIntegerObject();
 
                 args = new Object[] {
                     table.getName(), id
@@ -1112,7 +1060,7 @@ public class ParserCommand extends ParserDDL {
 
                 Integer  value = readIntegerObject();
                 Object[] args  = new Object[] {
-                    value, Boolean.valueOf(sqlLog)
+                    value, sqlLog
                 };
 
                 return new StatementCommand(
@@ -1130,34 +1078,15 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.PASSWORD : {
                 read();
+                readThis(Tokens.CHECK);
+                readThis(Tokens.FUNCTION);
 
-                switch (token.tokenType) {
+                Routine  routine = readCreatePasswordCheckFunction();
+                Object[] args    = new Object[]{ routine };
 
-                    case Tokens.CHECK : {
-                        read();
-                        readThis(Tokens.FUNCTION);
-
-                        Routine  routine = readCreatePasswordCheckFunction();
-                        Object[] args    = new Object[]{ routine };
-
-                        return new StatementCommand(
-                            StatementTypes.SET_DATABASE_PASSWORD_CHECK, args,
-                            null, null);
-                    }
-                    case Tokens.DIGEST : {
-                        read();
-
-                        name = readQuotedString();
-
-                        Object[] args = new Object[]{ name };
-
-                        return new StatementCommand(
-                            StatementTypes.SET_DATABASE_PASSWORD_DIGEST, args,
-                            null, null);
-                    }
-                    default :
-                        throw unexpectedToken();
-                }
+                return new StatementCommand(
+                    StatementTypes.SET_DATABASE_PASSWORD_CHECK, args, null,
+                    null);
             }
             case Tokens.REFERENTIAL : {
                 read();
@@ -1179,22 +1108,6 @@ public class ParserCommand extends ParserDDL {
                 String  property = null;
 
                 switch (token.tokenType) {
-
-                    case Tokens.RESTRICT :
-                        read();
-                        readThis(Tokens.EXEC);
-
-                        property = HsqlDatabaseProperties.sql_restrict_exec;
-                        flag     = processTrueOrFalseObject();
-                        break;
-
-                    case Tokens.LIVE :
-                        read();
-                        readThis(Tokens.OBJECT);
-
-                        property = HsqlDatabaseProperties.sql_live_object;
-                        flag     = processTrueOrFalseObject();
-                        break;
 
                     case Tokens.NAMES :
                         read();
@@ -1254,14 +1167,6 @@ public class ParserCommand extends ParserDDL {
                         flag = processTrueOrFalseObject();
                         property =
                             HsqlDatabaseProperties.jdbc_translate_tti_types;
-                        break;
-
-                    case Tokens.CHARACTER :
-                        read();
-                        readThis(Tokens.LITERAL);
-
-                        flag     = processTrueOrFalseObject();
-                        property = HsqlDatabaseProperties.sql_char_literal;
                         break;
 
                     case Tokens.CONCAT_WORD :
@@ -1364,16 +1269,6 @@ public class ParserCommand extends ParserDDL {
                         flag = processTrueOrFalseObject();
                         break;
 
-                    case Tokens.SYS : {
-                        read();
-                        readThis(Tokens.INDEX);
-                        readThis(Tokens.NAMES);
-
-                        flag     = processTrueOrFalseObject();
-                        property = HsqlDatabaseProperties.sql_sys_index_names;
-
-                        break;
-                    }
                     default :
                         throw unexpectedToken();
                 }
@@ -1436,8 +1331,6 @@ public class ParserCommand extends ParserDDL {
 
                         mode = TransactionManager.LOCKS;
                         break;
-
-                    default :
                 }
 
                 HsqlName[] names =
@@ -1452,10 +1345,7 @@ public class ParserCommand extends ParserDDL {
             case Tokens.UNIQUE : {
                 read();
                 readThis(Tokens.NAME);
-
-                if (!isUndelimitedSimpleName()) {
-                    throw unexpectedToken();
-                }
+                isUndelimitedSimpleName();
 
                 name = token.tokenString;
 
@@ -1496,26 +1386,6 @@ public class ParserCommand extends ParserDDL {
 
         switch (token.tokenType) {
 
-            case Tokens.CHECK : {
-                read();
-
-                long longValue  = readBigint();
-                long longValue2 = -1;
-
-                type  = StatementTypes.SET_DATABASE_FILES_CHECK;
-                names = database.schemaManager.getCatalogNameArray();
-
-                if (readIfThis(Tokens.COMMA)) {
-                    longValue2 = readBigint();
-                }
-
-                Object[] args = new Object[2];
-
-                args[0] = Long.valueOf(longValue);
-                args[1] = Long.valueOf(longValue2);
-
-                return new StatementCommand(type, args, null, names);
-            }
             case Tokens.CACHE : {
                 read();
 
@@ -1537,6 +1407,15 @@ public class ParserCommand extends ParserDDL {
 
                 break;
             }
+            case Tokens.CHECK : {
+                read();
+
+                value = readIntegerObject();
+                type  = StatementTypes.SET_DATABASE_FILES_CHECK;
+                names = database.schemaManager.getCatalogNameArray();
+
+                break;
+            }
             case Tokens.SCALE : {
                 read();
 
@@ -1549,18 +1428,7 @@ public class ParserCommand extends ParserDDL {
             case Tokens.SPACE : {
                 read();
 
-                if (token.tokenType == Tokens.TRUE) {
-                    flag = Boolean.TRUE;
-
-                    read();
-                } else if (token.tokenType == Tokens.FALSE) {
-                    flag = Boolean.FALSE;
-
-                    read();
-                } else {
-                    value = readIntegerObject();
-                }
-
+                flag  = processTrueOrFalseObject();
                 type  = StatementTypes.SET_DATABASE_FILES_SPACE;
                 names = database.schemaManager.getCatalogAndBaseTableNames();
 
@@ -1654,7 +1522,7 @@ public class ParserCommand extends ParserDDL {
 
                     read();
                 } else {
-                    delay = readInteger();
+                    delay = this.readInteger();
 
                     if (delay < 0) {
                         delay = 0;
@@ -1667,7 +1535,7 @@ public class ParserCommand extends ParserDDL {
                     }
                 }
 
-                value = Integer.valueOf(delay);
+                value = new Integer(delay);
 
                 break;
             }
@@ -1678,11 +1546,11 @@ public class ParserCommand extends ParserDDL {
                 if (token.tokenType == Tokens.TEXT) {
                     read();
 
-                    value = Integer.valueOf(0);
+                    value = new Integer(0);
                 } else {
                     readThis(Tokens.COMPRESSED);
 
-                    value = Integer.valueOf(3);
+                    value = new Integer(3);
                 }
 
                 type = StatementTypes.SET_DATABASE_FILES_SCRIPT_FORMAT;
@@ -1695,8 +1563,8 @@ public class ParserCommand extends ParserDDL {
 
         Object[] args = new Object[2];
 
-        args[0] = flag == null ? value
-                               : flag;
+        args[0] = flag == null ? (Object) value
+                               : (Object) flag;
         args[1] = mode;
 
         return new StatementCommand(type, args, null, names);
@@ -1776,7 +1644,7 @@ public class ParserCommand extends ParserDDL {
                             throw unexpectedToken();
                     }
 
-                    args[1] = Integer.valueOf(level);
+                    args[1] = new Integer(level);
 
                     break;
                 }
@@ -1852,38 +1720,14 @@ public class ParserCommand extends ParserDDL {
     private Statement compileLock() {
 
         read();
-
-        if (readIfThis(Tokens.CATALOG)) {
-            return compileLockCatalog();
-        } else {
-            readThis(Tokens.TABLE);
-
-            return compileLockTable();
-        }
-    }
-
-    private Statement compileLockCatalog() {
-
-        boolean isLock    = processTrueOrFalse();
-        int statementType = isLock ? StatementTypes.TRANSACTION_LOCK_CATALOG
-                                   : StatementTypes.TRANSACTION_UNLOCK_CATALOG;
-        HsqlName[] writeTableNames =
-            isLock ? database.schemaManager.getCatalogAndBaseTableNames()
-                   : null;
-        Statement cs = new StatementSession(statementType, null,
-                                            writeTableNames);
-
-        return cs;
-    }
-
-    private Statement compileLockTable() {
+        readThis(Tokens.TABLE);
 
         OrderedHashSet readSet  = new OrderedHashSet();
         OrderedHashSet writeSet = new OrderedHashSet();
 
         outerloop:
         while (true) {
-            Table table = readTableName(true);
+            Table table = readTableName();
 
             switch (token.tokenType) {
 
@@ -1946,6 +1790,7 @@ public class ParserCommand extends ParserDDL {
 
             read();
 
+            String   sql  = getLastPart();
             Object[] args = new Object[]{ savepoint };
             Statement cs =
                 new StatementSession(StatementTypes.ROLLBACK_SAVEPOINT, args);
@@ -1987,6 +1832,7 @@ public class ParserCommand extends ParserDDL {
 
         read();
 
+        String   sql  = getLastPart();
         Object[] args = new Object[]{ name };
 
         return new StatementSession(StatementTypes.SAVEPOINT, args);
@@ -2001,6 +1847,7 @@ public class ParserCommand extends ParserDDL {
 
         read();
 
+        String   sql  = getLastPart();
         Object[] args = new Object[]{ name };
 
         return new StatementSession(StatementTypes.RELEASE_SAVEPOINT, args);
@@ -2044,7 +1891,6 @@ public class ParserCommand extends ParserDDL {
                 };
 
                 return new StatementSession(
-                    session, compileContext,
                     StatementTypes.SET_SESSION_AUTHORIZATION, args);
             }
             case Tokens.RESULT : {
@@ -2057,18 +1903,6 @@ public class ParserCommand extends ParserDDL {
 
                 return new StatementSession(
                     StatementTypes.SET_SESSION_RESULT_MEMORY_ROWS, args);
-            }
-            case Tokens.FEATURE : {
-                read();
-
-                String   feature = parseSQLFeatureValue();
-                Boolean  value   = processTrueOrFalseObject();
-                Object[] args    = new Object[] {
-                    feature, value
-                };
-
-                return new StatementSession(StatementTypes.SET_SESSION_FEATURE,
-                                            args);
             }
             default :
                 throw unexpectedToken();
@@ -2101,8 +1935,9 @@ public class ParserCommand extends ParserDDL {
             }
         }
 
-        return new StatementSession(session, compileContext,
-                                    StatementTypes.SET_ROLE,
+        String sql = getLastPart();
+
+        return new StatementSession(StatementTypes.SET_ROLE,
                                     new Expression[]{ e });
     }
 
@@ -2134,8 +1969,9 @@ public class ParserCommand extends ParserDDL {
             }
         }
 
-        return new StatementSession(session, compileContext,
-                                    StatementTypes.SET_TIME_ZONE,
+        String sql = getLastPart();
+
+        return new StatementSession(StatementTypes.SET_TIME_ZONE,
                                     new Expression[]{ e });
     }
 
@@ -2169,10 +2005,9 @@ public class ParserCommand extends ParserDDL {
                 read();
                 break;
 
-            default :
+            // only semicolon is accepted here
         }
 
-        // only semicolon is accepted here
         if (token.tokenType == Tokens.SEMICOLON) {
             read();
         }
@@ -2181,7 +2016,8 @@ public class ParserCommand extends ParserDDL {
             throw unexpectedToken();
         }
 
-        Object[] args = new Object[]{ Integer.valueOf(closemode) };
+        String   sql  = getLastPart();
+        Object[] args = new Object[]{ new Integer(closemode) };
         Statement cs = new StatementCommand(StatementTypes.DATABASE_SHUTDOWN,
                                             args, null, null);
 
@@ -2313,43 +2149,6 @@ public class ParserCommand extends ParserDDL {
                                             args, null, names);
 
         return cs;
-    }
-
-    private Statement compilePerform() {
-
-        Integer type   = Integer.valueOf(1);
-        Integer number = Integer.valueOf(-1);
-
-        read();
-
-        switch (token.tokenType) {
-
-            case Tokens.CHECK : {
-                read();
-
-                HsqlName tableName = null;
-
-                readThis(Tokens.TABLE);
-                readThis(Tokens.SPACE);
-
-                if (readIfThis(Tokens.AND)) {
-                    readThis("FIX");
-
-                    type = Integer.valueOf(2);
-                }
-
-                Object[] args = new Object[] {
-                    tableName, type, number
-                };
-                HsqlName[] names =
-                    database.schemaManager.getCatalogAndBaseTableNames();
-
-                return new StatementCommand(StatementTypes.CHECK_INDEX, args,
-                                            null, names);
-            }
-            default :
-                throw unexpectedToken();
-        }
     }
 
     private Statement compileCheckpoint() {
